# TextCompiler

./: .gitignore  README.md  electron.vite.config.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: PACKAGING.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/main/: index.ts
src/preload/: index.ts
src/renderer/: index.html
src/renderer/src/: App.tsx  desktop.ts
src/renderer/src/core/: fileModel.test.ts  fileModel.ts  tipPrompt.test.ts  tipPrompt.ts
src/renderer/src/styles/: app.css
src/renderer/src/types/: global.d.ts  tauri-events.d.ts
src/shared/: languages.ts  types.ts
