[package]
name = "text-reader"
version = "0.1.0"
description = "文本阅读器"
authors = ["文本阅读器"]
edition = "2021"

[lib]
name = "text_reader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "text-reader"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dirs = "5"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
